fixed few form layout issues

--- a/public/css/ahmarBase.css
+++ b/public/css/ahmarBase.css
@@ -250,6 +250,9 @@ textarea{
 .font-bigger{
 	font-size:14px;
 }
+.font-biggest{
+	font-size:30px;
+}
 /*light box*/
 .black_overlay{
 	display: none;
